--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <html>
 <head>
 <title>Home</title>
-<img src="images/pf.png" width="10%"title=
-"sanjana pic">
+<img src="images/pf.png" width="10%"title="sanjana pic">
 <!--Empty Tag-->
 <br/>
 <b><i><u>sanjana profile</u></b></i>
@@ -41,5 +40,6 @@ Hii..! I am Sanjana, and I am currently learning UI/UX and graphic design from A
 
 
 </body>
+
 
 </html>
