--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <html>
 <head>
 <title>Home</title>
-<img src="images/pf.png" width="10%"title="sanjana pic">
+<img src="images/jk.jpeg" width="10%"title=
+"sanjana pic">
 <!--Empty Tag-->
+<br/>
 <br/>
 <b><i><u>sanjana profile</u></b></i>
 </header>
 </head>
 <style>
+
+    #hyper{
+        height:100px;
+    }
 
 header
 {
@@ -23,23 +29,47 @@ padding:30px;
 
 #about
 {
+   
+width:70%;
+height:200px;
+text-align: center;
+margin: auto;
 color:gray;
 padding:40px;
-box-shadow:10px 0px 10px  gray;
+box-shadow:10px 10px 10px  gray;
+
 }
 
 
 </style>
 <body>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="practice.html">Practice</a>
+        <a href="https://www.google.come/">Google</a>
+        <a href="MyProject.html">My Project</a>
+        
+    </nav>
+</body>
+
 <h3>About Me</h3>
-<hr/>
+
 <p id="about">
-Hii..! I am Sanjana, and I am currently learning UI/UX and graphic design from Arena Animation. I have a passion for creativity and love designing digital experiences that are both beautiful and easy to use. As I go through this learning journey, I am gaining skills in UI/UX, prototyping, and graphic design using tools like  Adobe Illustrator and Photoshop. I learn something new and apply my knowledge to real-world projects. In my free time, I love sketching, photography, Gaming, Traveling and experiencing different cultures also inspire my creativity. I am excited to keep learning and growing in this field!
+Hii..! I am Sanjana, and I am currently learning UI/UX 
+and graphic design from Arena Animation. I have a passion 
+for creativity and love designing digital experiences that are 
+both beautiful and easy to use. As I go through this learning
+ journey, I am gaining skills in UI/UX, prototyping, and graphic 
+ design using tools like  Adobe Illustrator and Photoshop. I learn 
+ something new and apply my knowledge to real-world projects. 
+ In my free time, I love sketching, photography, Gaming, Traveling and experiencing 
+ different cultures also inspire my creativity. I am excited to keep 
+ learning and growing in this field!
 
 </p>
 
 
 </body>
-
 
 </html>
