--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ box-shadow:10px 10px 10px  gray;
     <nav>
         <a href="Index.html">Home</a>
         <a href="Practice work.html">Practice</a>
-        <a href="Menu in html.html">menu in html</a>
+        <a href="Menu.html">menu in html</a>
         <a href="Web gallery.html">web gallery</a>
     </nav>
 
@@ -72,5 +72,6 @@ both beautiful and easy to use. As I go through this learning
 
 
 </body>
+
 
 </html>
