--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ box-shadow:10px 10px 10px  gray;
         <a href="Index.html">Home</a>
         <a href="Practice work.html">Practice</a>
         <a href="Menu.html">menu in html</a>
-        <a href="Web gallery.html">web gallery</a>
+        <a href="webgallery.html">web gallery</a>
     </nav>
 
     
@@ -75,3 +75,4 @@ both beautiful and easy to use. As I go through this learning
 
 
 </html>
+
