--- a/webgallery.html
+++ b/webgallery.html
@@ -55,12 +55,12 @@ border-radius:0px;
 <header> <div class="animate_animated animate_flip">Web Photo Gallery</div></header>
 <body>
 <main>
-<a href="p1.html"><img src="image/p1.jpg"class="pic></a>
-<a href="p2.html"><img src="image/p2.jpg"class="pic></a>
-<a href="p3.html"><img src="image/p3.jpg"class="pic></a>
-<a href="p4.html"><img src="image/p4.jpg"class="pic></a>
-<a href="p5.html"><img src="image/p5.jpg"class="pic></a>
-<a href="p6.html"><img src="image/p6.jpg"class="pic></a>
+<a href="p1.html"><img src="images/p1.jpg"class="pic></a>
+<a href="p2.html"><img src="images/p2.jpg"class="pic></a>
+<a href="p3.html"><img src="images/p3.jpg"class="pic></a>
+<a href="p4.html"><img src="images/p4.jpg"class="pic></a>
+<a href="p5.html"><img src="images/p5.jpg"class="pic></a>
+<a href="p6.html"><img src="images/p6.jpg"class="pic></a>
 
 </main>
 
@@ -68,3 +68,4 @@ border-radius:0px;
 
 </body>
 </html>
+
