--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ box-shadow:10px 10px 10px  gray;
         <a href="Practice work.html">Practice</a>
         <a href="Menu.html">menu in html</a>
         <a href="webgallery.html">web gallery</a>
+         <a href="drawing.html">Draw</a>
+        
     </nav>
 
     
@@ -75,4 +77,5 @@ both beautiful and easy to use. As I go through this learning
 
 
 </html>
+
 
